--- a/aboutme.html
+++ b/aboutme.html
@@ -6,6 +6,12 @@
 	<title>陳崑傑JerryChen簡介</title>
 </head>
 <body>
-	我叫陳崑傑JerryChen
+	<h3>我叫陳崑傑JerryChen</h3><br>
+	<h1>台南人</h1><br>
+
+	IG:kunjie_0828<br>
+	
+
+
 </body>
 </html>
